--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,10 +1,13 @@
 <ActionBar title="Groceries"></ActionBar>
 
 <GridLayout>
-    <RadCartesianChart>
-        <CategoricalAxis tkCartesianHorizontalAxis></CategoricalAxis>
-        <LinearAxis tkCartesianVerticalAxis></LinearAxis>
-        <BarSeries tkCartesianSeries [items]="favoriteFruits"
-            categoryProperty="type" valueProperty="count"></BarSeries>
-    </RadCartesianChart>
+  <RadCartesianChart>
+    <CategoricalAxis tkCartesianHorizontalAxis></CategoricalAxis>
+    <LinearAxis tkCartesianVerticalAxis></LinearAxis>
+    <BarSeries
+      tkCartesianSeries
+      [items]="favoriteFruits"
+      categoryProperty="type"
+      valueProperty="count"></BarSeries>
+  </RadCartesianChart>
 </GridLayout>
